Fix bg image on mobile view

--- a/src/output.css
+++ b/src/output.css
@@ -1417,6 +1417,14 @@ video {
     row-gap: 5rem;
   }
 
+  .sm\:bg-cover {
+    background-size: cover;
+  }
+
+  .sm\:bg-contain {
+    background-size: contain;
+  }
+
   .sm\:py-12 {
     padding-top: 3rem;
     padding-bottom: 3rem;
@@ -1464,6 +1472,16 @@ video {
 
   .sm\:ring-gray-900\/10 {
     --tw-ring-color: rgb(17 24 39 / 0.1);
+  }
+}
+
+@media (min-width: 768px) {
+  .md\:bg-cover {
+    background-size: cover;
+  }
+
+  .md\:bg-contain {
+    background-size: contain;
   }
 }
 
@@ -1574,6 +1592,10 @@ video {
     overflow: visible;
   }
 
+  .lg\:bg-cover {
+    background-size: cover;
+  }
+
   .lg\:px-0 {
     padding-left: 0px;
     padding-right: 0px;
@@ -1599,5 +1621,17 @@ video {
 
   .lg\:pt-4 {
     padding-top: 1rem;
+  }
+}
+
+@media (min-width: 1280px) {
+  .xl\:bg-cover {
+    background-size: cover;
+  }
+}
+
+@media (min-width: 1536px) {
+  .\32xl\:bg-cover {
+    background-size: cover;
   }
 }
